--- a/src/main.scss
+++ b/src/main.scss
@@ -144,6 +144,7 @@ a.pure-menu-link:hover {
   text-decoration: none;
 }
 .chip {
+  display: inline-block;
   color: $primary-color-dark !important;
   background-color: lighten($primary-color-light, 23%);
 }
