--- a/configuration/partials/awards-status.hbs
+++ b/configuration/partials/awards-status.hbs
@@ -18,7 +18,7 @@
 
       {{#ifAll
         (compare @root.data.accountInfo.hours_verify_award "!==" (stringify hours))
-        (compare @root.data.accountInfo.verified_hours "<" hours)
+        (compare @root.data.accountInfo.maximum_award_level "!==" hours)
         (compare @root.data.accountInfo.total_hours ">=" hours)
         (compare @root.data.accountInfo.total_hours "<" next_award_hours)
       }}{{{json key="claimable" value=hours }}},
