--- a/configuration/templates/volunteering/hours.hbs
+++ b/configuration/templates/volunteering/hours.hbs
@@ -117,13 +117,12 @@
               <li class="card-subtitle">
                 <span class="fa-li"><span class="far fa-id-card-alt"></span></span>
                 {{#unless (getProperty (itemAt @root.context.metaData.certificates (indexOf (map @root.context.metaData.certificates (getProp 'hours')) @root.data.awardsStatus.current)) "highest") ~}}
-                <a href="/task-edit/{{task_id}}">
-                  {{#ifAny volunteer_manager_first_name volunteer_manager_last_name}}
-                  {{volunteer_manager_first_name}} {{volunteer_manager_last_name}}
-                  {{else}}
-                    Unknown
-                  {{/ifAny}}
-                </a>
+                {{#ifAny volunteer_manager_first_name volunteer_manager_last_name}}
+                {{volunteer_manager_first_name}} {{volunteer_manager_last_name}}
+                {{else}}
+                  Unknown
+                {{/ifAny}}
+                &ensp;<a href="/task-edit/{{task_id}}" class="caption">Edit details</a>
                 {{else}}
                 {{volunteer_manager_first_name}} {{volunteer_manager_last_name}}
                 {{/unless ~}}
