--- a/configuration/emails/admin-approval-body.mjml
+++ b/configuration/emails/admin-approval-body.mjml
@@ -18,7 +18,7 @@
             </p>
 
             <p>
-              Please check with your records that this user is an appropriate person to be administrating {{@root.context.metaData.title}} volunteer groups, and if so, click the link below.
+              Please check that this user is suitable to be a group administrator for the {{@root.context.metaData.title}}. If so, click the link below.
             </p>
 
             <p>
