--- a/configuration/partials/emails/admin-approval-body.html
+++ b/configuration/partials/emails/admin-approval-body.html
@@ -199,7 +199,7 @@
                                         <div style="font-family:Montserrat, Helvetica, Arial, sans-serif;font-size:16px;line-height:20px;text-align:left;color:#16204e;">
                                           <p>Hello,</p>
                                           <p> This is a request for approval from the {{@root.context.metaData.title}} website. {{first_name}} {{last_name}}, has signed up as a group administrator on behalf of {{organisation_name}} for the {{@root.context.metaData.title}}. </p>
-                                          <p> Please check with your records that this user is an appropriate person to be administrating {{@root.context.metaData.title}} volunteer groups, and if so, click the link below. </p>
+                                          <p> Please check that this user is suitable to be a group administrator for the {{@root.context.metaData.title}}. If so, click the link below. </p>
                                           <p>
                                             <a href="{{approval_url}}" color="#42842A" style="color:#42842A;font-weight:bold;">I give permission for {{first_name}} {{last_name}} to use the {{@root.context.metaData.title}} website as a group administrator</a>
                                           </p>
