--- a/configuration/layouts/default.hbs
+++ b/configuration/layouts/default.hbs
@@ -3,14 +3,14 @@
 <head prefix="og: http://ogp.me/ns# profile: http://ogp.me/ns/profile#">
   <meta charset="utf-8">
   <!-- Global site tag (gtag.js) - Google Analytics -->
-  {{!-- <script async src="https://www.googletagmanager.com/gtag/js?id=UA-3467930-33"></script>
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-3467930-33"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
     function gtag(){dataLayer.push(arguments);}
     gtag('js', new Date());
 
     gtag('config', 'UA-3467930-33');
-  </script> --}}
+  </script>
   {{{layoutParts.head}}}
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -83,11 +83,11 @@
   <link type="text/css" rel="stylesheet" href="{{~>asset_url url='main.css'}}" />
 </head>
 <body>
-  {{#unless (contains request.url.hostname ".local") ~}}
+  {{!-- {{#unless (contains request.url.hostname ".local") ~}}
   <div class="text-white bg-warning text-centre v-padding">
     This website is currently in development, but it will send emails so please only use your own email addresses when testing. Any accounts you create will be deleted by w/c 9th March.
   </div>
-  {{/unless ~}}
+  {{/unless ~}} --}}
   <div class="page">
   {{#ifAny request.params.query.debug (contains request.url.hostname ".local") ~}}
     {{#if errors.[0]}}
