--- a/configuration/layouts/default.hbs
+++ b/configuration/layouts/default.hbs
@@ -26,24 +26,16 @@
 
   -->
 
-  <link rel="shortcut icon" href="{{~>asset_url url='images/icons/favicon.ico'~}}">
-  <link rel="apple-touch-icon" sizes="57x57" href="{{~>asset_url url='images/icons/apple-icon-57x57.png'~}}">
-  <link rel="apple-touch-icon" sizes="60x60" href="{{~>asset_url url='images/icons/apple-icon-60x60.png'~}}">
-  <link rel="apple-touch-icon" sizes="72x72" href="{{~>asset_url url='images/icons/apple-icon-72x72.png'~}}">
-  <link rel="apple-touch-icon" sizes="76x76" href="{{~>asset_url url='images/icons/apple-icon-76x76.png'~}}">
-  <link rel="apple-touch-icon" sizes="114x114" href="{{~>asset_url url='images/icons/apple-icon-114x114.png'~}}">
-  <link rel="apple-touch-icon" sizes="120x120" href="{{~>asset_url url='images/icons/apple-icon-120x120.png'~}}">
-  <link rel="apple-touch-icon" sizes="144x144" href="{{~>asset_url url='images/icons/apple-icon-144x144.png'~}}">
-  <link rel="apple-touch-icon" sizes="152x152" href="{{~>asset_url url='images/icons/apple-icon-152x152.png'~}}">
-  <link rel="apple-touch-icon" sizes="180x180" href="{{~>asset_url url='images/icons/apple-icon-180x180.png'~}}">
-  <link rel="icon" type="image/png" sizes="192x192" href="{{~>asset_url url='images/icons/android-icon-192x192.png'~}}">
+  <link rel="apple-touch-icon" sizes="120x120" href="{{~>asset_url url='images/icons/apple-touch-icon.png'~}}">
   <link rel="icon" type="image/png" sizes="32x32" href="{{~>asset_url url='images/icons/favicon-32x32.png'~}}">
-  <link rel="icon" type="image/png" sizes="96x96" href="{{~>asset_url url='images/icons/favicon-96x96.png'~}}">
   <link rel="icon" type="image/png" sizes="16x16" href="{{~>asset_url url='images/icons/favicon-16x16.png'~}}">
-  <link rel="manifest" href="{{~>asset_url url='images/icons/manifest.json'~}}">
-  <meta name="msapplication-TileColor" content="{{@root.context.metaData.theme.secondary}}">
-  <meta name="msapplication-TileImage" content="{{~>asset_url url='images/icons/ms-icon-144x144.png'~}}">
-  <meta name="theme-color" content="{{@root.context.metaData.theme.secondary}}">
+  <link rel="manifest" href="{{~>asset_url url='images/icons/site.webmanifest'~}}">
+  <link rel="mask-icon" href="{{~>asset_url url='images/icons/safari-pinned-tab.svg'~}}" color="#1b2875">
+  <link rel="shortcut icon" href="{{~>asset_url url='images/icons/favicon.ico'~}}">
+  <meta name="msapplication-TileColor" content="#1b2875">
+  <meta name="msapplication-config" content="{{~>asset_url url='images/icons/browserconfig.xml'~}}">
+  <meta name="theme-color" content="#ffffff">
+
   <link rel="search" type="application/opensearchdescription+xml" title="{{@root.context.metaData.title}}" href="{{~>asset_url url='opensearch.xml'~}}" />
   <script src="https://cdnjs.cloudflare.com/ajax/libs/babel-polyfill/7.8.3/polyfill.min.js"></script>
   <script>
