centre text on home

--- a/configuration/templates/pages/home-not-authenticated.hbs
+++ b/configuration/templates/pages/home-not-authenticated.hbs
@@ -52,10 +52,10 @@
   </div>
   <div class="columns">
     <div class="column col-6 col-lg-8 col-md-12 col-mx-auto">
-      <h2>
+      <h2 class="text-centre">
         Aged 12-25 and volunteer?
       </h2>
-      <p class="b-margin-full">
+      <p class="b-margin-full text-centre">
         {{@root.context.metaData.fullTitle}} are the Scottish Government's way of celebrating, recognising and rewarding the commitment, contribution and achievements of young volunteers in Scotland.
       </p>
       {{!-- <p class="b-margin-full">
