--- a/configuration/layouts/default.hbs
+++ b/configuration/layouts/default.hbs
@@ -468,7 +468,7 @@
             <div class="column col-6 col-xl-12 about">
               <h4>About</h4>
               <p class="b-margin">
-                {{@root.context.metaData.fullTitle}} is run by the <a href="https://scvo.org">Scottish Council for Voluntary Organisations</a> and supported by the <a href="https://www.gov.scot/policies/third-sector">Scottish Government</a> and Scotland's <a href="https://www.gov.scot/policies/third-sector/third-sector-interfaces">Third Sector Interfaces</a>.
+                {{@root.context.metaData.fullTitle}} is run by Scotland's <a href="https://www.gov.scot/policies/third-sector/third-sector-interfaces">Third Sector Interfaces</a> and supported by the <a href="https://www.gov.scot/policies/third-sector">Scottish Government</a> and the <a href="https://scvo.org">Scottish Council for Voluntary Organisations</a>.
               </p>
               {{!-- <ul>
                 {{#each @root.context.metaData.menus.footer-about ~}}
