--- a/configuration/partials/opportunity-search-form.hbs
+++ b/configuration/partials/opportunity-search-form.hbs
@@ -234,6 +234,7 @@
       config: {
         "#location-lat": { value: { __pointer: "metadata.suggestion.point.lat" } },
         "#location-lng": { value: { __pointer: "metadata.suggestion.point.lon" } },
+        "#default-sort": { value: { __template: "distance" } },
         ">.tt-input": { value: { __pointer: "metadata.suggestion.display" } }
       }
     },
