--- a/configuration/partials/log-empty.hbs
+++ b/configuration/partials/log-empty.hbs
@@ -4,7 +4,7 @@
   </div>
   <p class="empty-title h5">You haven't logged any volunteering yet</p>
   <p class="empty-subtitle">
-    {{@root.context.metaData.fullTitle}} gives you recognition for the volunteering you do.
+    The {{@root.context.metaData.title}} gives you recognition for the volunteering you do.
   </p>
   <p class="empty-subtitle">
     Add your first volunteering task to begin logging hours.
