--- a/configuration/templates/pages/home-not-authenticated.hbs
+++ b/configuration/templates/pages/home-not-authenticated.hbs
@@ -56,7 +56,7 @@
         Aged 12-25 and volunteer?
       </h2>
       <p class="b-margin-full text-centre">
-        {{@root.context.metaData.fullTitle}} are the Scottish Government's way of celebrating, recognising and rewarding the commitment, contribution and achievements of young volunteers in Scotland.
+        The {{@root.context.metaData.title}} are the Scottish Government's way of celebrating, recognising and rewarding the commitment, contribution and achievements of young volunteers in Scotland.
       </p>
       {{!-- <p class="b-margin-full">
         Do you have a <strong>claim code</strong> from an existing certificate? Sign up now to add it to your account.
