--- a/configuration/partials/emails/parental-approval-body.html
+++ b/configuration/partials/emails/parental-approval-body.html
@@ -198,8 +198,8 @@
                                       <td align="left" style="font-size:0px;padding:0px;word-break:break-word;">
                                         <div style="font-family:Montserrat, Helvetica, Arial, sans-serif;font-size:16px;line-height:20px;text-align:left;color:#16204e;">
                                           <p> Dear parent / guardian, </p>
-                                          <p> You are receiving this email from the {{@root.context.metaData.fullTitle}} website because {{first_name}} {{last_name}}, has named you as their parent or guardian. </p>
-                                          <p> As {{first_name}} is under 13, we require their parent or guardian to give permission to use the {{@root.context.metaData.fullTitle}} website. You can indicate that you give permission, by following the link below. </p>
+                                          <p> You are receiving this email from the {{@root.context.metaData.title}} website because {{first_name}} {{last_name}}, has named you as their parent or guardian. </p>
+                                          <p> As {{first_name}} is under 13, we require their parent or guardian to give permission to use the {{@root.context.metaData.title}} website. You can indicate that you give permission, by following the link below. </p>
                                           <p>
                                             <a href="{{approval_url}}" color="#42842A" style="color:#42842A;font-weight:bold;">I give permission for {{first_name}} {{last_name}} to use the {{@root.context.metaData.title}} website</a>
                                           </p>
