--- a/configuration/partials/emails/welcome-body.html
+++ b/configuration/partials/emails/welcome-body.html
@@ -198,8 +198,8 @@
                                       <td align="left" style="font-size:0px;padding:0px;word-break:break-word;">
                                         <div style="font-family:Montserrat, Helvetica, Arial, sans-serif;font-size:16px;line-height:20px;text-align:left;color:#16204e;">
                                           <p> Hello {{@root.data.accountInfo.first_name}}, welcome to the {{@root.context.metaData.title}}! </p>
-                                          <p>
-                                            {{@root.context.metaData.fullTitle}} are the Scottish Government's way of celebrating, recognising and rewarding the commitment, contribution and achievements of young volunteers in Scotland. </p>
+                                          <p> The {{@root.context.metaData.title}} are the Scottish Government's way of celebrating, recognising and rewarding the commitment, contribution and achievements of young volunteers in Scotland. </p>
+                                          <p> You can now sign in to <a href="{{@root.context.metaData.url}}">{{replace @root.context.metaData.url 'https://' 'www.'}}</a> to log your volunteer hours and receive recognition for all the great things you are doing through your volunteering. </p>
                                           <p> Thank you<br />
                                             {{@root.context.metaData.title}}
                                           </p>
