--- a/configuration/templates/pages/about.hbs
+++ b/configuration/templates/pages/about.hbs
@@ -10,7 +10,7 @@
     What are the Saltire Awards?
   </h2>
   <p class="b-margin-full">
-    {{@root.context.metaData.fullTitle}} are the Scottish Government's way of celebrating, recognising and rewarding the commitment, contribution and achievements of young volunteers in Scotland, aged between 12 and 25.
+    The {{@root.context.metaData.title}} are the Scottish Government's way of celebrating, recognising and rewarding the commitment, contribution and achievements of young volunteers in Scotland, aged between 12 and 25.
   </p>
   <p class="b-margin-full">
     Young people gain nationally recognised certificates, signed by Scottish Government Ministers, for the different amounts of volunteering they do.
